--- a/style.css
+++ b/style.css
@@ -65,6 +65,10 @@ body {
 
 /* feature */
 
+.section-1 {
+  height: 94vh;
+}
+
 .feature-title {
   text-align: center;
   padding-top: 85px;
@@ -101,14 +105,14 @@ body {
   height: 400px;
   border-top-left-radius: 50%;
   border-top-right-radius: 50%;
-  background-color: #0597A026;
+  background-color: #0597a026;
 }
 .card3 {
   width: 380px;
   height: 400px;
   border-top-left-radius: 50%;
   border-top-right-radius: 50%;
-  background-color: #477D1126;
+  background-color: #477d1126;
 }
 .imageC {
   text-align: center;
@@ -130,14 +134,14 @@ body {
   cursor: pointer;
 }
 .underline2 {
-    text-align: center;
-    padding-top: 50px;
-    text-decoration: underline;
-    color: #272727;
-    font-weight: 700;
-    font-size: 16px;
-    cursor: pointer;
-  }
+  text-align: center;
+  padding-top: 50px;
+  text-decoration: underline;
+  color: #272727;
+  font-weight: 700;
+  font-size: 16px;
+  cursor: pointer;
+}
 
 .img1 {
   width: 225px;
@@ -153,4 +157,37 @@ body {
   width: 240px;
   height: 310px;
   padding-top: 50px;
+}
+
+/* Sale Up Part */
+
+.container-3 {
+  margin-top: 90px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #e554730d;
+  padding: 80px 100px 60px 100px;
+  height: 320px;
+}
+.left-side {
+  text-align: center;
+  padding-top: 20px;
+  padding-right: 180px;
+}
+
+.sale-title{
+  color: #272727;
+  font-family: Lato;
+  font-size: 30px;
+  font-weight: bold;
+ 
+}
+
+.diff-color{
+    color: #E55473;
+}
+
+img {
+  width: 250px;
 }
