--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ body {
   padding: 14px 24px;
   border: none;
   font-size: 15px;
+  cursor: pointer;
 }
 
 /* Banner */
@@ -198,13 +199,12 @@ body {
 
 .container-4{
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
-   
-    padding: 20px 120px 30px 120px;
+    padding: 20px 105px 30px 105px;
 }
 .card{
-    margin-right: 28px;
+   
     margin-top: 5px;
 }
 
@@ -222,9 +222,10 @@ img{
     margin-top: 50px;
     width: full;
     height: 380px;
-    margin-left: 100px;
+    margin-left: 130px;
     margin-right: 130px;
     border-radius: 10px;
+    margin-bottom: 40px;
 
     
 }
@@ -273,4 +274,45 @@ img{
     color: rgba(255, 255, 255, 0.40);
     padding-top: 18px;
     font-size: 14px;
+}
+
+
+/* New section added */
+
+.section-added{
+  height: 100vh;
+  margin-top: 120px;
+  
+}
+
+.added-part{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px 120px 100px 120px;
+}
+
+
+
+
+
+.added-photo{
+  
+  width: 250px;
+  margin: 15px;
+}
+
+
+.added-title{
+  font-size: 40px;
+  width: 400px;
+  padding-bottom: 20px;
+}
+.added-disc{
+  font-size: 16px;
+  color: rgba(39, 39, 39, 0.8);
+  padding-bottom: 20px;
+  width: 450px;
+  
+
 }
