--- a/style.css
+++ b/style.css
@@ -211,7 +211,7 @@ img{
 
 /* 2nd part of insta */
 .subsection{
-    background-image: url("./asset/rec9.png");
+    background-image: url("./asset/form/rec99.png");
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
